# lattitude-legacy

./: .gitignore  Cargo.toml  sample.lattitude.toml
src/: main.rs
src/accuweather/: daily_forecast.rs  hourly_forecast.rs  location.rs  mod.rs
src/art/: mod.rs  weather.rs
src/birdnet/: detections.rs  mod.rs
src/calendar/: mod.rs
src/cli/: mod.rs
src/data/: data.rs  mod.rs
src/display/: mod.rs
src/font/: mod.rs
src/graphics/: mod.rs
src/netatmo/: mod.rs  station_data.rs
src/paint/: mod.rs
src/purple/: mod.rs  purple_data.rs
src/state/: mod.rs
